home/tdarr/server.yaml
kind: Service
apiVersion: v1
metadata:
  name: tdarr
  labels:
    app.kubernetes.io/name: tdarr
spec:
  selector:
    app.kubernetes.io/name: tdarr
  type: LoadBalancer
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 8265
    - protocol: TCP
      name: server
      port: 8266
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tdarr
  annotations:
    app.kubernetes.io/name: tdarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: tdarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: tdarr
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      automountServiceAccountToken: false
      containers:
      - name: tdarr
        image: haveagitgat/tdarr:2.40.01
        imagePullPolicy: Always
        ports:
          - containerPort: 8265
            name: ui
          - containerPort: 8266
            name: server
        volumeMounts:
          - mountPath: /app/configs
            name: config
          - mountPath: /app/server
            name: server
          - mountPath: /app/logs
            name: logs
          - mountPath: /temp
            name: transcode-cache
          - mountPath: /video
            name: video
      volumes:
        - name: logs
          persistentVolumeClaim:
            claimName: tdarr-logs
        - name: config
          persistentVolumeClaim:
            claimName: tdarr-config
        - name: server
          persistentVolumeClaim:
            claimName: tdarr-srv
        - name: transcode-cache
          persistentVolumeClaim:
            claimName: tdarr-transode-cache
        - name: video
          nfs:
            server: nfs.homelab
            path: /share/h0/multimedia/video
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tdarr-node
  annotations:
    app.kubernetes.io/name: tdarr-node
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: tdarr-node
  template:
    metadata:
      labels:
        app.kubernetes.io/name: tdarr-node
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      # Ensure each node is running on separate Kubernetes node
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app.kubernetes.io/name: tdarr-node
      automountServiceAccountToken: false
      containers:
        - name: tdarr
          image: haveagitgat/tdarr_node:2.40.01
          imagePullPolicy: Always
          resources:
            requests:
              gpu.intel.com/i915: "1"
            limits:
              gpu.intel.com/i915: "1"
          ports:
            - containerPort: 8265
              name: ui
            - containerPort: 8266
              name: server
          volumeMounts:
            - mountPath: /app/configs
              name: config
            - mountPath: /app/server
              name: server
            - mountPath: /app/logs
              name: logs
            - mountPath: /temp
              name: transcode-cache
            - mountPath: /video
              name: video
      volumes:
        - name: logs
          emptyDir: {}
        - name: config
          emptyDir: {}
        - name: server
          emptyDir: {}
        - name: transcode-cache
          persistentVolumeClaim:
            claimName: tdarr-transode-cache
        - name: video
          nfs:
            server: nfs.homelab
            path: /share/h0/multimedia/video
